fix: collapse style

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,43 +18,47 @@
     font-family: 'NotoEmoji';
     src: url('./NotoColorEmoji-flagsonly.ttf') format('truetype');
   }
-}
 
-@utility card {
-  @apply bg-base-100 rounded-lg shadow-md;
-  .card-body {
-    @apply p-4;
+  .collapse {
+    @apply bg-base-100 rounded-lg shadow-md;
   }
-}
 
-@utility collapse {
-  @apply bg-base-100 rounded-lg shadow-md;
-}
+  .collapse.transparent-collapse {
+    @apply bg-transparent! shadow-none! backdrop-blur-none!; /* 取代 background-color: transparent */
+  }
 
-@utility select {
-  @apply w-auto;
-}
+  .card {
+    @apply bg-base-100 rounded-lg shadow-md;
+    .card-body {
+      @apply p-4;
+    }
+  }
 
-@utility btn {
-  @apply border-none;
-}
+  .select {
+    @apply w-auto;
+  }
 
-@utility tabs {
+  .btn {
+    @apply border-none;
+  }
+
+  .tabs {
+    .tab {
+      @apply px-2;
+    }
+    .tab.tab-active {
+      @apply bg-primary text-primary-content;
+    }
+  }
+
   .tab {
-    @apply px-2;
+    @apply max-md:min-w-24;
   }
-  .tab.tab-active {
-    @apply bg-primary text-primary-content;
-  }
-}
 
-@utility tab {
-  @apply max-md:min-w-24;
-}
-
-@utility table {
-  & tr {
-    @apply border-b-0;
+  .table {
+    & tr {
+      @apply border-b-0;
+    }
   }
 }
 
